<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/recycler_bordered_bg"
    android:padding="@dimen/default_padding">

    <TextView
        android:id="@+id/tv_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_item"
        android:textColor="#000"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/et_item"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:background="#fff"
        android:hint="@string/et_item_name"
        android:inputType="text"
        android:maxLength="30"
        android:maxLines="1"
        android:textColor="#000"
        android:textSize="@dimen/text_size"
        app:layout_constraintLeft_toRightOf="@id/tv_unit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_unit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_unit"
        android:textColor="#000"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/et_unit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_unit" />

    <EditText
        android:id="@+id/et_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="#fff"
        android:hint="@string/et_unit"
        android:inputType="number"
        android:maxLength="12"
        android:maxLines="1"
        android:textSize="@dimen/text_size"
        app:layout_constraintLeft_toRightOf="@id/tv_unit"
        app:layout_constraintRight_toLeftOf="@id/tv_quantity"
        app:layout_constraintTop_toBottomOf="@id/et_item" />

    <TextView
        android:id="@+id/tv_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_quantity"
        android:textColor="#000"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toBottomOf="@+id/et_unit"
        app:layout_constraintLeft_toRightOf="@id/et_unit"
        app:layout_constraintRight_toLeftOf="@id/et_quantity"
        app:layout_constraintTop_toTopOf="@id/et_unit" />

    <EditText
        android:id="@+id/et_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="#fff"
        android:hint="@string/et_quantity"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:maxLines="1"
        android:textSize="@dimen/text_size"
        app:layout_constraintLeft_toRightOf="@id/tv_quantity"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_item" />


    <TextView
        android:id="@+id/tv_measured"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/tv_measured"
        android:textColor="#000"
        android:textSize="@dimen/text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_unit" />

    <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:background="@drawable/spinner_bg"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/tv_measured"
        app:layout_constraintLeft_toRightOf="@id/tv_measured"
        app:layout_constraintTop_toTopOf="@id/tv_measured">

        <Spinner
            android:id="@+id/unit_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:spinnerMode="dropdown"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:src="@drawable/dropdown" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:backgroundTint="#548354"
        android:text="Add an item"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_measured" />


</androidx.constraintlayout.widget.ConstraintLayout>