<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:padding="10dp"
    tools:context=".InvoiceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/logo_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description_company_logo"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tv_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="0333 - 2384042\n0332 - 2569183\nOffice# 17, B - Road\nLiaquatabad, Karachi"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffffff"
            android:padding="@dimen/default_padding">

            <TextView
                android:id="@+id/rv_tv_invoice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Invoice: "
                android:textSize="@dimen/text_size"
                android:textColor="#000"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_logo" />

            <TextView
                android:id="@+id/tv_customer_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/review_customer_info"
                android:textSize="@dimen/text_size"
                android:textColor="#000"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_tv_invoice" />


            <TextView
                android:id="@+id/rv_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="ITEMS"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_customer_info" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_items_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/rv_items" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/grand_total"
                android:textColor="#000"
                android:id="@+id/tv_grand_total"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_items_confirm"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="#8F0000"
                android:gravity="center"
                android:text="BACK"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="#548354"
                android:text="CONFIRM"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>