<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    android:padding="10dp"
    tools:context=".InvoiceActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/logo_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description_company_logo"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/tv_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text="0333 - 2384042\n0332 - 2569183\nOffice# 17, B - Road\nLiaquatabad, Karachi"
                android:textSize="16sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#80ffffff"
            android:padding="@dimen/default_padding">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date: dd/MM/yyyy"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_logo" />

            <TextView
                android:id="@+id/tv_previous_invoice_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/previous_invoice"
                android:textColor="#000"
                app:layout_constraintTop_toBottomOf="@id/tv_date" />

            <EditText
                android:id="@+id/et_invoice_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Invoice no"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/tv_previous_invoice_number" />

            <TextView
                android:id="@+id/tv_customer_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="CUSTOMER INFO"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_invoice_no" />

            <EditText
                android:id="@+id/et_customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Customer Name"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/tv_customer_info" />

            <EditText
                android:id="@+id/et_customer_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone no. (03xxx)"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1"
                app:layout_constraintTop_toBottomOf="@id/et_customer_name" />

            <EditText
                android:id="@+id/et_customer_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Address"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@id/et_customer_phone" />

            <TextView
                android:id="@+id/tv_item_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="ADD ITEMS"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_customer_address" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_items"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_item_data" />

            <include
                android:id="@+id/included"
                layout="@layout/recycler_layout"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_items" />


            <TextView
                android:id="@+id/tv_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DELIVERY:"
                android:textColor="#000000"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/et_delivery"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/included" />

            <EditText
                android:id="@+id/et_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Delivery Charges"
                android:inputType="number"
                app:layout_constraintLeft_toRightOf="@id/tv_delivery"
                app:layout_constraintTop_toBottomOf="@id/included" />

            <TextView
                android:id="@+id/tv_total_items"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_total_items"
                android:textColor="#000"
                app:layout_constraintTop_toBottomOf="@id/tv_delivery" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <Button
                android:id="@+id/btn_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="#8F0000"
                android:gravity="center"
                android:text="RESET"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_proceed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="#548354"
                android:text="SAVE"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>